--- a/docs/03_results.Rmd
+++ b/docs/03_results.Rmd
@@ -154,7 +154,7 @@ responses_coded <- responses %>%
   mutate_at(vars(group), as.factor) %>% 
   # center predictors
   mutate_at(
-    vars(lv, pthn, frequency),
+    vars(lv_std, pthn_std, frequency_zipf_std),
     function(x) scale(x, center = TRUE, scale = TRUE)[,1]) %>% 
   # impute missing data
   mice(m = 5, print = FALSE, method = "pmm") %>% 
@@ -168,7 +168,7 @@ responses_coded <- responses %>%
 
 ```{r coefs_fixed_table, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 
-coefs <- fixef(model_fits$fit_6) %>% 
+coefs <- fixef(fit_6) %>% 
   as.data.frame() %>% 
   rownames_to_column("variable") %>% 
   clean_names() %>% 
@@ -176,12 +176,12 @@ coefs <- fixef(model_fits$fit_6) %>%
 
 str_repl <- c(
   "Intercept" = "Intercept",
-  "frequency_zipf" = "Frequency\n[+1 SD]",
-  "pthn:lv" = "PTHN \u00d7 Levenshtein", 
-  "lv:groupENGvs.SPA" = "Levenshtein \u00d7 Group 1",
-  "lv:groupENGMCATvs.ENGMSPA" = "Levenshtein \u00d7 Group 2",
-  "lv" = "Levenshtein\n[+1 SD]",
-  "pthn" = "PTHN\n[+1 SD]",
+  "frequency_zipf_std" = "Frequency\n[+1 SD]",
+  "pthn_std:lv_std" = "PTHN \u00d7 Levenshtein", 
+  "lv_std:groupENGvs.SPA" = "Levenshtein \u00d7 Group 1",
+  "lv_std:groupENGMCATvs.ENGMSPA" = "Levenshtein \u00d7 Group 2",
+  "lv_std" = "Levenshtein\n[+1 SD]",
+  "pthn_std" = "PTHN\n[+1 SD]",
   "groupENGvs.SPA" =  "Group 1\n[ENG-* vs. SPA-CAT]",
   "groupENGMCATvs.ENGMSPA" = "Group 2\n[ENG-CAT vs. ENG-SPA]"
 )
@@ -219,7 +219,7 @@ coefs %>%
 
 
 
-coefs <- fixef(model_fits$fit_6) %>% 
+coefs <- fixef(fit_6) %>% 
   as.data.frame() %>% 
   rownames_to_column("variable") %>% 
   clean_names() %>% 
@@ -231,12 +231,12 @@ coefs <- fixef(model_fits$fit_6) %>%
 
 str_repl <- c(
   "Intercept" = "Intercept",
-  "frequency_zipf" = "Frequency\n[+1 SD]",
-  "pthn:lv" = "PTHN \u00d7 Levenshtein", 
-  "lv:group1" = "Levenshtein \u00d7 Group 1",
-  "lv:group2" = "Levenshtein \u00d7 Group 2",
-  "lv" = "Levenshtein\n[+1 SD]",
-  "pthn" = "PTHN\n[+1 SD]",
+  "frequency_zipf_std" = "Frequency\n[+1 SD]",
+  "pthn_std:lv_std" = "PTHN \u00d7 Levenshtein", 
+  "lv_std:group1" = "Levenshtein \u00d7 Group 1",
+  "lv_std:group2" = "Levenshtein \u00d7 Group 2",
+  "lv_std" = "Levenshtein\n[+1 SD]",
+  "pthn_std" = "PTHN\n[+1 SD]",
   "group1" =  "Group 1\n[ENG-* vs. SPA-CAT]",
   "group2" = "Group 2\n[ENG-CAT vs. ENG-SPA]"
 )
@@ -336,8 +336,8 @@ post_sd <- ggplot(filter(post_sd_data, group=="Participants"), aes(.value, fct_r
 
 
 # Pearson correlations between random effects
-corr_mat <- VarCorr(model_fits$fit_6, summary = TRUE)$participant$cor 
-corr_names <- rownames(VarCorr(model_fits$fit_6, summary = TRUE)$participant$cor)
+corr_mat <- VarCorr(fit_6, summary = TRUE)$participant$cor 
+corr_names <- rownames(VarCorr(fit_6, summary = TRUE)$participant$cor)
 
 corr_mat <- corr_mat %>% 
   as_tibble() %>% 
@@ -510,7 +510,7 @@ ggplot(post_re,
 
 
 ```{r post_re_word, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
-fixed_intercept <- fixef(model_fits$fit_6)[1,c(1, 3, 4)] %>% 
+fixed_intercept <- fixef(fit_6)[1,c(1, 3, 4)] %>% 
   inv_logit_scaled()
 
 post_re <- posterior_draws_random$words   %>% 
@@ -614,26 +614,26 @@ ggsave(here("img", "accuracy.png"), height = 9, width = 5, dpi = 500)
 ```{r emmeans_pthn, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.width=7, fig.height=6}
 
 m <- posterior_epreds_fixed %>% 
-  mutate_at(vars(pthn, frequency_zipf), function(x) paste0(x, " SD")) %>% 
+  mutate_at(vars(pthn_std, frequency_zipf_std), function(x) paste0(x, " SD")) %>% 
   mutate(
-    pthn = case_when(
-      pthn=="-1 SD" ~ "Low PTHN",
-      pthn=="0 SD" ~ "Mean PTHN",
-      pthn=="1 SD" ~ "High PTHN"
+    pthn_std = case_when(
+      pthn_std=="-1 SD" ~ "Low PTHN",
+      pthn_std=="0 SD" ~ "Mean PTHN",
+      pthn_std=="1 SD" ~ "High PTHN"
     ),
-    frequency_zipf = case_when(
-      frequency_zipf=="-1 SD" ~ "Low frequency",
-      frequency_zipf=="0 SD" ~ "Mean frequency",
-      frequency_zipf=="1 SD" ~ "High frequency"
+    frequency_zipf_std = case_when(
+      frequency_zipf_std=="-1 SD" ~ "Low frequency",
+      frequency_zipf_std=="0 SD" ~ "Mean frequency",
+      frequency_zipf_std=="1 SD" ~ "High frequency"
     )
   ) 
 
 
-ggplot(m, aes(lv, .epred, colour = pthn, fill = pthn)) +
+ggplot(m, aes(lv_std, .epred, colour = pthn_std, fill = pthn_std)) +
   facet_wrap(~group) +
   geom_hline(yintercept = 0.5, colour = "grey") +
-  geom_line(aes(group = interaction(pthn, .draw)), alpha = 0.25, size = 0.5, show.legend = TRUE) +
-  stat_summary(aes(linetype = pthn), fun = mean, geom = "line", 
+  geom_line(aes(group = interaction(pthn_std, .draw)), alpha = 0.25, size = 0.5, show.legend = TRUE) +
+  stat_summary(aes(linetype = pthn_std), fun = mean, geom = "line", 
                colour = "black", size = 0.75, show.legend = TRUE) +
   annotate("segment", x = -0.5, xend = -0.9, y = 0.85, yend = 0.85, 
            arrow = arrow(length = unit(0.1, "cm")), size = .5) +
